[gd_scene load_steps=8 format=3 uid="uid://bcael1rwki1g0"]

[ext_resource type="Script" path="res://scripts/level_elements/enemy_spawn_area.gd" id="1_842hq"]
[ext_resource type="AudioStream" uid="uid://yphvr3vte6t4" path="res://audio/sfx/portal.ogg" id="2_c4m1d"]
[ext_resource type="Texture2D" uid="uid://chuu5yyekoye2" path="res://img/portal.png" id="2_rgdyd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_iwllr"]
size = Vector3(2, 3, 2)

[sub_resource type="Animation" id="Animation_mr4ab"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker3D/Sprite3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker3D/Sprite3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vnyv0"]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker3D/Sprite3D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker3D/Sprite3D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mhah0"]
_data = {
"RESET": SubResource("Animation_mr4ab"),
"spawn": SubResource("Animation_vnyv0")
}

[node name="EnemySpawnArea" type="Area3D" groups=["enemy_spawn_areas"]]
editor_description = "Marks the point where an enemy can be spawned and stores information about if there is anything obstructing the area."
collision_layer = 0
collision_mask = 5
monitorable = false
script = ExtResource("1_842hq")
spawn_sound_effect = ExtResource("2_c4m1d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_iwllr")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Sprite3D" type="Sprite3D" parent="Marker3D"]
visible = false
modulate = Color(1, 1, 1, 0)
pixel_size = 0.1
billboard = 1
texture_filter = 0
texture = ExtResource("2_rgdyd")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mhah0")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
